# alignimation

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/alignimation/: __init__.py  base.py  constants.py  face.py  io.py
