[tool.poetry]
name = "alignimation"
version = "0.1.0"
description = ""
authors = ["Ethan Rosenthal <ethan@ethanrosenthal.com>"]
packages = [
    { include = "alignimation", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.4.3"
torch = "^1.9.0"
torchvision = "^0.10.0"
kornia = "^0.5.8"
tqdm = "^4.62.2"
facenet-pytorch = "^2.5.2"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
ipykernel = "^6.2.0"
ipywidgets = "^7.6.3"
mypy = "^0.910"
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
